@@ -1,3 +1,8 @@
+2007-08-31  Nestor Salceda  <nestor.salceda@gmail.com>
+	
+	* configure.ac: Install Gendarme.Framework to be reusable (pkg-config)
+	with other runners.
+
 2006-11-08  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* gendarme.sln: Update solution file for VS.NET
